css almost works

--- a/fun/03/index.html
+++ b/fun/03/index.html
@@ -11,51 +11,67 @@
 		<div class="all">
 			<div class="board">
 				<div class="line">
-					<div id="slot13" class="peg" draggable="true" ondragstart="dragStart(event);"></div>
-					<div id="slot14" class="peg" draggable="true" ondragstart="dragStart(event);"></div>
-					<div id="slot15" class="peg" draggable="true" ondragstart="dragStart(event);"></div>
+					<div class="slot"></div>
+					<div class="slot"></div>
+					<div id="slot13" class="peg slot" draggable="true" ondragstart="dragStart(event);"><img src="peg2.png"></div>
+					<div id="slot14" class="peg slot" draggable="true" ondragstart="dragStart(event);"><img src="peg2.png"></div>
+					<div id="slot15" class="peg slot" draggable="true" ondragstart="dragStart(event);"><img src="peg2.png"></div>
+					<div class="slot"></div>
+					<div class="slot"></div>
 		  		</div>
 				<div class="line">
-					<div id="slot23" class="peg" draggable="true" ondragstart="dragStart(event);"></div>
-					<div id="slot24" class="peg" draggable="true" ondragstart="dragStart(event);"></div>
-					<div id="slot25" class="peg" draggable="true" ondragstart="dragStart(event);"></div>
+					<div class="slot"></div>
+					<div class="slot"></div>
+					<div id="slot23" class="peg slot" draggable="true" ondragstart="dragStart(event);"><img src="peg2.png"></div>
+					<div id="slot24" class="peg slot" draggable="true" ondragstart="dragStart(event);"><img src="peg2.png"></div>
+					<div id="slot25" class="peg slot" draggable="true" ondragstart="dragStart(event);"><img src="peg2.png"></div>
+					<div class="slot"></div>
+					<div class="slot"></div>
 		  		</div>
 				<div class="line">
-					<div id="slot31" class="peg" draggable="true" ondragstart="dragStart(event);"></div>
-					<div id="slot32" class="peg" draggable="true" ondragstart="dragStart(event);"></div>
-					<div id="slot33" class="peg" draggable="true" ondragstart="dragStart(event);"></div>
-					<div id="slot34" class="peg" draggable="true" ondragstart="dragStart(event);"></div>
-					<div id="slot35" class="peg" draggable="true" ondragstart="dragStart(event);"></div>
-					<div id="slot36" class="peg" draggable="true" ondragstart="dragStart(event);"></div>
-					<div id="slot37" class="peg" draggable="true" ondragstart="dragStart(event);"></div>
+					<div id="slot31" class="peg slot" draggable="true" ondragstart="dragStart(event);"><img src="peg2.png"></div>
+					<div id="slot32" class="peg slot" draggable="true" ondragstart="dragStart(event);"><img src="peg2.png"></div>
+					<div id="slot33" class="peg slot" draggable="true" ondragstart="dragStart(event);"><img src="peg2.png"></div>
+					<div id="slot34" class="peg slot" draggable="true" ondragstart="dragStart(event);"><img src="peg2.png"></div>
+					<div id="slot35" class="peg slot" draggable="true" ondragstart="dragStart(event);"><img src="peg2.png"></div>
+					<div id="slot36" class="peg slot" draggable="true" ondragstart="dragStart(event);"><img src="peg2.png"></div>
+					<div id="slot37" class="peg slot" draggable="true" ondragstart="dragStart(event);"><img src="peg2.png"></div>
 		  		</div>
 				<div class="line">
-					<div id="slot41" class="peg" draggable="true" ondragstart="dragStart(event);"></div>
-					<div id="slot42" class="peg" draggable="true" ondragstart="dragStart(event);"></div>
-					<div id="slot43" class="peg" draggable="true" ondragstart="dragStart(event);"></div>
-					<div id="slot44" class="empty-slot" ondragover="allowDrop(event);" ondrop="drop(event);"></div>
-					<div id="slot45" class="peg" draggable="true" ondragstart="dragStart(event);"></div>
-					<div id="slot46" class="peg" draggable="true" ondragstart="dragStart(event);"></div>
-					<div id="slot47" class="peg" draggable="true" ondragstart="dragStart(event);"></div>
+					<div id="slot41" class="peg slot" draggable="true" ondragstart="dragStart(event);"><img src="peg2.png"></div>
+					<div id="slot42" class="peg slot" draggable="true" ondragstart="dragStart(event);"><img src="peg2.png"></div>
+					<div id="slot43" class="peg slot" draggable="true" ondragstart="dragStart(event);"><img src="peg2.png"></div>
+					<div id="slot44" class="empty-slot slot" ondragover="allowDrop(event);" ondrop="drop(event);"><img src="emptySlot.png"/></div>
+					<div id="slot45" class="peg slot" draggable="true" ondragstart="dragStart(event);"><img src="peg2.png"></div>
+					<div id="slot46" class="peg slot" draggable="true" ondragstart="dragStart(event);"><img src="peg2.png"></div>
+					<div id="slot47" class="peg slot" draggable="true" ondragstart="dragStart(event);"><img src="peg2.png"></div>
 		  		</div>
 				<div class="line">
-					<div id="slot51" class="peg" draggable="true" ondragstart="dragStart(event);"></div>
-					<div id="slot52" class="peg" draggable="true" ondragstart="dragStart(event);"></div>
-					<div id="slot53" class="peg" draggable="true" ondragstart="dragStart(event);"></div>
-					<div id="slot54" class="peg" draggable="true" ondragstart="dragStart(event);"></div>
-					<div id="slot55" class="peg" draggable="true" ondragstart="dragStart(event);"></div>
-					<div id="slot56" class="peg" draggable="true" ondragstart="dragStart(event);"></div>
-					<div id="slot57" class="peg" draggable="true" ondragstart="dragStart(event);"></div>
+					<div id="slot51" class="peg slot" draggable="true" ondragstart="dragStart(event);"><img src="peg2.png"></div>
+					<div id="slot52" class="peg slot" draggable="true" ondragstart="dragStart(event);"><img src="peg2.png"></div>
+					<div id="slot53" class="peg slot" draggable="true" ondragstart="dragStart(event);"><img src="peg2.png"></div>
+					<div id="slot54" class="peg slot" draggable="true" ondragstart="dragStart(event);"><img src="peg2.png"></div>
+					<div id="slot55" class="peg slot" draggable="true" ondragstart="dragStart(event);"><img src="peg2.png"></div>
+					<div id="slot56" class="peg slot" draggable="true" ondragstart="dragStart(event);"><img src="peg2.png"></div>
+					<div id="slot57" class="peg slot" draggable="true" ondragstart="dragStart(event);"><img src="peg2.png"></div>
 		  		</div>
 				<div class="line">
-					<div id="slot63" class="peg" draggable="true" ondragstart="dragStart(event);"></div>
-					<div id="slot64" class="peg" draggable="true" ondragstart="dragStart(event);"></div>
-					<div id="slot65" class="peg" draggable="true" ondragstart="dragStart(event);"></div>
+					<div class="slot"></div>
+					<div class="slot"></div>
+					<div id="slot63" class="peg slot" draggable="true" ondragstart="dragStart(event);"><img src="peg2.png"></div>
+					<div id="slot64" class="peg slot" draggable="true" ondragstart="dragStart(event);"><img src="peg2.png"></div>
+					<div id="slot65" class="peg slot" draggable="true" ondragstart="dragStart(event);"><img src="peg2.png"></div>
+					<div class="slot"></div>
+					<div class="slot"></div>
 		  		</div>
 				<div class="line">
-					<div id="slot73" class="peg" draggable="true" ondragstart="dragStart(event);"></div>
-					<div id="slot74" class="peg" draggable="true" ondragstart="dragStart(event);"></div>
-					<div id="slot75" class="peg" draggable="true" ondragstart="dragStart(event);"></div>
+					<div class="slot"></div>
+					<div class="slot"></div>
+					<div id="slot73" class="peg slot" draggable="true" ondragstart="dragStart(event);"><img src="peg2.png"></div>
+					<div id="slot74" class="peg slot" draggable="true" ondragstart="dragStart(event);"><img src="peg2.png"></div>
+					<div id="slot75" class="peg slot" draggable="true" ondragstart="dragStart(event);"><img src="peg2.png"></div>
+					<div class="slot"></div>
+					<div class="slot"></div>
 		  		</div>
 			</div>
 		</div>
