Continue question and answer
Still didn't do the answer part, but added css and button.

--- a/fun/07/index.html
+++ b/fun/07/index.html
@@ -3,13 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <title>Question And Answer</title>
+    <link rel="stylesheet" type="text/css" href="question-and-answer.css"/>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bona+Nova:wght@700&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="all">
-        <label for="y-or-n">
+        <label for="y-or-n" class="question">
             האין הטרומבון ישות מדהימה שאין כמותה? (יש לענות ב"כן" או "לא")
         </label> <br>
-        <input type="text" id="y-or-n" name="y-or-n">
+        <input type="text" id="y-or-n" name="y-or-n" class="input-answer" placeholder="כן או לא"> <br>
+        <button class="finished-button">
+            סיימתי לכתוב
+        </button>
     </div>
 </body>
 </html>
