Add "feedbacks" that tell if the answer is right or wrong
Also added css, but I don't know how to make the "!"s on the left

--- a/fun/07/index.html
+++ b/fun/07/index.html
@@ -17,6 +17,22 @@
         <button class="finished-button">
             סיימתי לכתוב
         </button>
+        <div class="wrong-answer feedback">
+            <div class="feedback-title">
+                טעות!!
+            </div>
+            <div class="feedback-text">
+                הו, האימה! האם הרגע אמרת שהטרומבון אינו ישות מדהימה שאין כמותה?? בושה וחרפה!
+            </div>
+        </div>
+        <div class="right-answer feedback">
+            <div class="feedback-title">
+                נכון!!
+            </div>
+            <div class="feedback-text">
+                אכן, הטרמבון הוא הישות הנעלה והחשובה ביותר בכל הלבן, אפילו בכל היצור.
+            </div>
+        </div>
     </div>
 </body>
 </html>
