make this page mobile-friendly

--- a/fun/08/index.html
+++ b/fun/08/index.html
@@ -2,6 +2,7 @@
 <html lang="en" dir="rtl">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width">
     <title>Question And Answer</title>
     <link rel="stylesheet" type="text/css" href="english.css"/>
     <script src="english.js"></script>
