Added progress bar
Now you can see your progress while you're playing!

--- a/fun/08/index.html
+++ b/fun/08/index.html
@@ -12,6 +12,18 @@
 </head>
 <body onload="randomWord();">
     <div class="all" id="all-beginning">
+        <div class="counter-container">
+            <div class="counter-cell" id="cell0"></div>
+            <div class="counter-cell" id="cell1"></div>
+            <div class="counter-cell" id="cell2"></div>
+            <div class="counter-cell" id="cell3"></div>
+            <div class="counter-cell" id="cell4"></div>
+            <div class="counter-cell" id="cell5"></div>
+            <div class="counter-cell" id="cell6"></div>
+            <div class="counter-cell" id="cell7"></div>
+            <div class="counter-cell" id="cell8"></div>
+            <div class="counter-cell" id="cell9"></div>
+        </div>
         <label for="translation" class="question">
             מה התרגום של <span id="english-word"></span>?
         </label>
