--- a/fun/08/index.html
+++ b/fun/08/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width">
-    <title>Question And Answer</title>
+    <title>English</title>
     <link rel="stylesheet" type="text/css" href="english.css"/>
     <script src="english.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
