--- a/fun/09/index.html
+++ b/fun/09/index.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Assistant:wght@400;700&display=swap" rel="stylesheet">
 </head>
-<body onload="getLocation();">
+<body onload="getLocation(showPosition, cantLoad);">
     <div class="all">
         <div class="cant" id="cant">לא מצליח לאתר את מיקומך.</div>
         <div class="parameters-container" id="parameter-container">
