Fixed last bug + added distance
There is a new bug with the distance thing, need to ask Dad

Co-Authored-By: Zvika Ben-Haim <zvikabh@users.noreply.github.com>

--- a/fun/09/index.html
+++ b/fun/09/index.html
@@ -17,6 +17,7 @@
             <div class="parameter">קו רוחב: <span id="latitude"></span></div>
             <div class="parameter">קו אורך: <span id="longitude"></span></div>
             <div class="parameter">דיוק: <span id="accuracy"></span> מטרים</div>
+            <div class="parameter">מרחק עד לנקודה הבאה: <span id="distance"></span> מטרים</div>
         </div>
     </div>
 </body>
