--- a/fun/09/index.html
+++ b/fun/09/index.html
@@ -18,6 +18,7 @@
             <div class="parameter">קו אורך: <span id="longitude"></span></div>
             <div class="parameter">דיוק: <span id="accuracy"></span> מטרים</div>
             <div class="parameter">מרחק עד לנקודה הבאה: <span id="distance"></span> מטרים</div>
+            <div class="parameter"> סיבוב הטלפון: <span id="orientation"></span> מעלות</div>
         </div>
     </div>
 </body>
