Added image instead of emoji

--- a/fun/09/index.html
+++ b/fun/09/index.html
@@ -20,7 +20,7 @@
             <div class="parameter">מרחק עד לנקודה הבאה: <span id="distance"></span> מטרים</div>
             <div class="parameter"> סיבוב הטלפון: <span id="orientation"></span> מעלות</div>
         </div>
-        <div id="arrow">🠲</div>
+        <div id="arrow-container"><img src="arrow.png" id="arrow"></div>
     </div>
 </body>
 </html>
