Updated Table of Contents
We aren't going to continue the Treasure Hunt in the near future so I replaced it by the Tic-Tac-Toe, that hopefully we will finish.

--- a/fun/00/index.html
+++ b/fun/00/index.html
@@ -51,10 +51,10 @@
         <a href="https://noony-yay.github.io/website/fun/09" target="_blank">
             <div class="button under-development">
                 <div class="name">
-                    Treasure Hunt
+                    Tic-Tac-Toe
                 </div>
                 <div class="explanation">
-                    Still under development. Right now only shows parameters.
+                    Still under development. Right now only shows the board with circles.
                 </div>
             </div>
         </a>
