--- a/fun/11/index.html
+++ b/fun/11/index.html
@@ -9,15 +9,15 @@
 <body>
     <div class="all">
         <div class="grid">
-            <div class="cell" id="cell1"></div>
-            <div class="cell" id="cell2"></div>
-            <div class="cell" id="cell3"></div>
-            <div class="cell" id="cell4"></div>
-            <div class="cell" id="cell5"></div>
-            <div class="cell" id="cell6"></div>
-            <div class="cell" id="cell7"></div>
-            <div class="cell" id="cell8"></div>
-            <div class="cell" id="cell9"></div>
+            <div class="cell empty" id="cell1"></div>
+            <div class="cell empty" id="cell2"></div>
+            <div class="cell empty" id="cell3"></div>
+            <div class="cell empty" id="cell4"></div>
+            <div class="cell empty" id="cell5"></div>
+            <div class="cell empty" id="cell6"></div>
+            <div class="cell empty" id="cell7"></div>
+            <div class="cell empty" id="cell8"></div>
+            <div class="cell empty" id="cell9"></div>
         </div>
     </div>
 </body>
