--- a/fun/11/index.html
+++ b/fun/11/index.html
@@ -6,6 +6,9 @@
     <title>Tic-Tac-Toe</title>
     <link rel="stylesheet" type="text/css" href="tic-tac-toe.css"/>
     <script src="tictactoe.js"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="all">
