Added computer's turn
After every time the player clicks, the computer chooses a random empty cell and "clicks" there.
IMPORTANT: for some reason the program does nothing when the computer wins. Need to fix it.

--- a/fun/00/index.html
+++ b/fun/00/index.html
@@ -54,7 +54,7 @@
                     Tic-Tac-Toe
                 </div>
                 <div class="explanation">
-                    Still under development. Right now only shows the board with circles.
+                    Still under development. Right now the computer chooses cells randomly.
                 </div>
             </div>
         </a>
