Added thinking modal
So player can't click twice in a row too fast

--- a/fun/11/index.html
+++ b/fun/11/index.html
@@ -28,8 +28,15 @@
     </div>
     <div class="modal" id="won-modal">
         <div class="modal-content">
-            <div class="modal-text">
+            <div class="modal-text" id="won-text">
                 Player <span id="winner"></span> won!
+            </div>
+        </div>
+    </div>
+    <div class="modal" id="thinking-modal">
+        <div class="modal-content">
+            <div class="modal-text">
+                Thinking...
             </div>
         </div>
     </div>
