Works on mobile
Co-Authored-By: Zvika Ben-Haim <zvikabh@users.noreply.github.com>

--- a/fun/00/index.html
+++ b/fun/00/index.html
@@ -17,48 +17,41 @@
 </head>
 <body>
     <div class="all">
-        <div class="title">Table <span id="of">of</span> Contents</div>
-        <a href="https://noony-yay.github.io/website/fun/01" target="_blank">
-            <div class="button">
-                <div class="name">
-                    Covid Game
-                </div>
-                <div class="explanation">
-                    Tap on the Covid to multiply it, drag it to give it a mask!
-                </div>
+        <div class="title">
+            Table <span id="of">of</span> Contents
+        </div>
+        <div class="button" onclick="window.open('https://noony-yay.github.io/website/fun/01', '_blank')">
+            <div class="name">
+                Covid Game
             </div>
-        </a>
-        <a href="https://noony-yay.github.io/website/fun/03" target="_blank">
-            <div class="button">
-                <div class="name">
-                    Peg Solitaire
-                </div>
-                <div class="explanation">
-                    Drag the pegs to the empty spots. Try to get rid of as many pegs as you can!
-                </div>
+            <div class="explanation">
+                Tap on the Covid to multiply it, drag it to give it a mask!
             </div>
-        </a>
-        <a href="https://noony-yay.github.io/website/fun/08" target="_blank">
-            <div class="button">
-                <div class="name">
-                    English Quiz
-                </div>
-                <div class="explanation">
-                    Practice your English with short 10-questions quizzes!
-                </div>
+        </div>
+        <div class="button" onclick="window.open('https://noony-yay.github.io/website/fun/03', '_blank')">
+            <div class="name">
+                Peg Solitaire
             </div>
-        </a>
-        <a href="https://noony-yay.github.io/website/fun/11" target="_blank">
-            <div class="button under-development">
-                <div class="name">
-                    Tic-Tac-Toe
-                </div>
-                <div class="explanation">
-                    Still under development. Right now the computer chooses cells randomly.
-                </div>
+            <div class="explanation">
+                Drag the pegs to the empty spots. Try to get rid of as many pegs as you can!
             </div>
-        </a>
-
+        </div>
+        <div class="button" onclick="window.open('https://noony-yay.github.io/website/fun/08', '_blank')">
+            <div class="name">
+                English Quiz
+            </div>
+            <div class="explanation">
+                Practice your English with short 10-questions quizzes!
+            </div>
+        </div>
+        <div class="button under-development" onclick="window.open('https://noony-yay.github.io/website/fun/11', '_blank')">
+            <div class="name">
+                Tic-Tac-Toe
+            </div>
+            <div class="explanation">
+                Still under development. Right now the computer chooses cells randomly.
+            </div>
+        </div>
     </div>
 </body>
 </html>
