updated table of contents

--- a/fun/00/index.html
+++ b/fun/00/index.html
@@ -44,12 +44,12 @@
                 Practice your English with short 10-questions quizzes!
             </div>
         </div>
-        <div class="button under-development" onclick="window.open('https://noony-yay.github.io/website/fun/11', '_blank')">
+        <div class="button" onclick="window.open('https://noony-yay.github.io/website/fun/11', '_blank')">
             <div class="name">
                 Tic-Tac-Toe
             </div>
             <div class="explanation">
-                Still under development. Right now the computer chooses cells randomly.
+                Play Tic-Tac-Toe against the computer!
             </div>
         </div>
     </div>
