--- a/fun/08/index.html
+++ b/fun/08/index.html
@@ -10,7 +10,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Assistant:wght@400;700&display=swap" rel="stylesheet">
 </head>
-<body onload="randomWord();">
+<body onload="selectAndShowRandomWord();">
     <div class="all" id="all-beginning">
         <div class="counter-container">
             <div class="counter-cell" id="cell0"></div>
