Added statistics in the end

--- a/fun/08/index.html
+++ b/fun/08/index.html
@@ -53,8 +53,19 @@
     </div>
     <div class="all" id="all-end">
         <div id="summary-title"></div>
-        <div id="summary-text">
-            צדקת  <span id="only"></span>ב-<span id="num-correct-questions"></span> מעשר השאלות!
+        <div class="summary-text">
+            צדקת  
+            <span id="only"></span>
+            ב-
+            <span id="num-correct-questions"></span>
+             מעשר השאלות!
+        </div>
+        <div class="summary-text">
+            ענית כבר על 
+            <span id="num-questions"></span>
+            שאלות, מתוכן על %
+            <span id="correct-precentage"></span>
+             ענית נכון!
         </div>
     </div>
 </body>
