grid to html function

--- a/fun/12/index.html
+++ b/fun/12/index.html
@@ -1,12 +1,39 @@
 <!DOCTYPE html>
-<html lang="en" dir="rtl">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>English Crossword</title>
     <link rel="stylesheet" type="text/css" href="crossword.css"/>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="../08/english.js"></script>
     <script src="crossword.js"></script>
 </head>
 <body>
-    
+    <div id="all">
+        <div id="title">Crossword</div>
+        <div id="crossword">
+            <!-- <div class="cell letter-cell">
+                <div class="number">1</div>
+                <div class="letter">A</div>
+            </div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell letter-cell">
+                <div class="number">2</div>
+                <div class="letter">L</div>
+            </div>
+            <div class="cell letter-cell">
+                <div class="letter">O</div>
+            </div>
+            <div class="cell letter-cell">
+                <div class="letter">W</div>
+            </div>
+            <div class="cell letter-cell">
+                <div class="letter">L</div>
+            </div>
+            <div class="cell"></div>
+            <div class="cell"></div> -->
+        </div>
+    </div>
 </body>
 </html>
