function that adds the first word

--- a/fun/12/index.html
+++ b/fun/12/index.html
@@ -8,7 +8,7 @@
     <script src="../08/english.js"></script>
     <script src="crossword.js"></script>
 </head>
-<body>
+<body onload="main();">
     <div id="all">
         <div id="title">Crossword</div>
         <div id="crossword">
