Added buttons, name at the top and selected item class

--- a/fun/13/index.html
+++ b/fun/13/index.html
@@ -10,6 +10,9 @@
 </head>
 <body>
     <div id="all">
+        <div class="logo-bar">
+            חיבורים
+        </div>
         <div class="grid-container">
             <div class="grid-item" id="item11">
                 <div class="item-text" id="item-text11"></div>
@@ -59,6 +62,11 @@
             <div class="grid-item" id="item44">
                 <div class="item-text" id="item-text44"></div>
             </div>
+        </div>
+        <div class="buttons-container">
+            <div class="button" id="check-button">בדיקה</div>
+            <div class="button" id="hint-button">רמז</div>
+            <div class="button" id="shuffle-button">ערבוב</div>
         </div>
     </div>
 </body>
